<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_you_flight"
                android:textColor="@color/text_color_white"
                android:textSize="@dimen/text_regular_3x" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/action_bar">

        <RelativeLayout
            android:id="@+id/rl_flight"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/background">

            <LinearLayout
                android:id="@+id/flight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_3"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_flight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_flight_black_24dp" />

                <TextView
                    android:id="@+id/tv_flight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:text="@string/flight"
                    android:textColor="@color/text_color_white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/flight"
                android:layout_marginStart="@dimen/margin_medium_3"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btn_round_trip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_rectangle"
                    android:text="@string/roundtrip"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color_white"
                    />

                <Button
                    android:id="@+id/btn_one_way"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_rectangle"
                    android:text="@string/oneway"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color_white" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_flight"
            android:layout_marginTop="@dimen/margin_large">

            <RelativeLayout
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_3"
                android:layout_marginTop="@dimen/margin_medium_2">

                <ImageView
                    android:id="@+id/iv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location_on_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_toEndOf="@id/iv_location"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/from" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/to" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"/>
                    </LinearLayout>


                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/location"
                android:layout_marginStart="@dimen/margin_medium_3"
                android:layout_marginTop="@dimen/margin_medium_2">

                <ImageView
                    android:id="@+id/iv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_date_range_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_toEndOf="@id/iv_date"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/departure" />

                        <EditText
                            android:id="@+id/et_departure_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="datetime"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/return_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/return_date" />

                        <EditText
                            android:id="@+id/et_return_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"/>
                    </LinearLayout>


                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/date"
                android:layout_marginStart="@dimen/margin_medium_3"
                android:layout_marginTop="@dimen/margin_medium_2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_xlarge"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/passenger" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/seat_class" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"/>
                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>


        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/form"
            android:layout_marginTop="@dimen/margin_large">
            <Button
                android:id="@+id/btn_search"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:text="@string/search_flight"
                android:drawableEnd="@drawable/ic_search_black_24dp"
                android:textAllCaps="false"
                android:textColor="@color/text_color_white"
                android:layout_marginStart="100dp"
                android:background="@drawable/search_button_rectangle"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_medium">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/best_value_offers_to_europe"
                android:textStyle="bold"
                android:textSize="@dimen/text_heading_1x"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_medium"
            android:visibility="gone">
            <android.support.v7.widget.CardView
                android:id="@+id/iv_price"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:cardCornerRadius="10dp">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/europe"
                    android:scaleType="fitXY"/>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_toEndOf="@+id/iv_price"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_centerVertical="true"
                android:weightSum="3">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prague"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from_860"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_arrow_forward_black_24dp"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>